Create details card mixin

--- a/browse.html
+++ b/browse.html
@@ -47,6 +47,359 @@
     <div class="container">
       <h1>Browse our books</h1>
     </div>
+        <li class="info-card">
+          <div class="info-card-details-cover"><img src="./img/1.jpg">
+            <p class="info-card-details-link"><a href="#">More Details</a></p>
+          </div>
+          <div class="info-card-details-info">
+            <h5 class="info-card-details-title">A Game of Thrones</h5>
+            <h6 class="info-card-details-author">George R.R. Martin</h6>
+            <div class="info-card-details-time">
+              <p class="info-card-details-time-title">Expected Reading Time: </p>
+              <p class="info-card-details-time-amount">4 Hours and 24 Minutes</p>
+            </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+          </div>
+          <div class="info-card-details-table">
+            <table>
+              <tr>
+                <th>Year</th>
+                <td>2011</td>
+              </tr>
+              <tr>
+                <th>Pages</th>
+                <td>410</td>
+              </tr>
+              <tr>
+                <th>Words</th>
+                <td>344000</td>
+              </tr>
+              <tr>
+                <th>Genre</th>
+                <td>Fantasy</td>
+              </tr>
+            </table>
+          </div>
+        </li>
+        <li class="info-card">
+          <div class="info-card-details-cover"><img src="./img/2.jpg">
+            <p class="info-card-details-link"><a href="#">More Details</a></p>
+          </div>
+          <div class="info-card-details-info">
+            <h5 class="info-card-details-title">A Clash of Kings</h5>
+            <h6 class="info-card-details-author">George R.R. Martin</h6>
+            <div class="info-card-details-time">
+              <p class="info-card-details-time-title">Expected Reading Time: </p>
+              <p class="info-card-details-time-amount">13 Hours and 24 Minutes</p>
+            </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+          </div>
+          <div class="info-card-details-table">
+            <table>
+              <tr>
+                <th>Year</th>
+                <td>2011</td>
+              </tr>
+              <tr>
+                <th>Pages</th>
+                <td>410</td>
+              </tr>
+              <tr>
+                <th>Words</th>
+                <td>433000</td>
+              </tr>
+              <tr>
+                <th>Genre</th>
+                <td>Fantasy</td>
+              </tr>
+            </table>
+          </div>
+        </li>
+        <li class="info-card">
+          <div class="info-card-details-cover"><img src="./img/3.jpg">
+            <p class="info-card-details-link"><a href="#">More Details</a></p>
+          </div>
+          <div class="info-card-details-info">
+            <h5 class="info-card-details-title">A Storm of Swords</h5>
+            <h6 class="info-card-details-author">George R.R. Martin</h6>
+            <div class="info-card-details-time">
+              <p class="info-card-details-time-title">Expected Reading Time: </p>
+              <p class="info-card-details-time-amount">8 Hours and 24 Minutes</p>
+            </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+          </div>
+          <div class="info-card-details-table">
+            <table>
+              <tr>
+                <th>Year</th>
+                <td>2011</td>
+              </tr>
+              <tr>
+                <th>Pages</th>
+                <td>410</td>
+              </tr>
+              <tr>
+                <th>Words</th>
+                <td>433000</td>
+              </tr>
+              <tr>
+                <th>Genre</th>
+                <td>Fantasy</td>
+              </tr>
+            </table>
+          </div>
+        </li>
+        <li class="info-card">
+          <div class="info-card-details-cover"><img src="./img/4.jpg">
+            <p class="info-card-details-link"><a href="#">More Details</a></p>
+          </div>
+          <div class="info-card-details-info">
+            <h5 class="info-card-details-title">A Feast for Crows</h5>
+            <h6 class="info-card-details-author">George R.R. Martin</h6>
+            <div class="info-card-details-time">
+              <p class="info-card-details-time-title">Expected Reading Time: </p>
+              <p class="info-card-details-time-amount">8 Hours and 24 Minutes</p>
+            </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+          </div>
+          <div class="info-card-details-table">
+            <table>
+              <tr>
+                <th>Year</th>
+                <td>2011</td>
+              </tr>
+              <tr>
+                <th>Pages</th>
+                <td>410</td>
+              </tr>
+              <tr>
+                <th>Words</th>
+                <td>433000</td>
+              </tr>
+              <tr>
+                <th>Genre</th>
+                <td>Fantasy</td>
+              </tr>
+            </table>
+          </div>
+        </li>
+        <li class="info-card">
+          <div class="info-card-details-cover"><img src="./img/5.jpg">
+            <p class="info-card-details-link"><a href="#">More Details</a></p>
+          </div>
+          <div class="info-card-details-info">
+            <h5 class="info-card-details-title">A Dance with Dragons</h5>
+            <h6 class="info-card-details-author">George R.R. Martin</h6>
+            <div class="info-card-details-time">
+              <p class="info-card-details-time-title">Expected Reading Time: </p>
+              <p class="info-card-details-time-amount">4 Hours and 24 Minutes</p>
+            </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+          </div>
+          <div class="info-card-details-table">
+            <table>
+              <tr>
+                <th>Year</th>
+                <td>2011</td>
+              </tr>
+              <tr>
+                <th>Pages</th>
+                <td>410</td>
+              </tr>
+              <tr>
+                <th>Words</th>
+                <td>433000</td>
+              </tr>
+              <tr>
+                <th>Genre</th>
+                <td>Fantasy</td>
+              </tr>
+            </table>
+          </div>
+        </li>
+        <li class="info-card">
+          <div class="info-card-details-cover"><img src="./img/11.jpg">
+            <p class="info-card-details-link"><a href="#">More Details</a></p>
+          </div>
+          <div class="info-card-details-info">
+            <h5 class="info-card-details-title">The Fault in Our Stars</h5>
+            <h6 class="info-card-details-author">John Green</h6>
+            <div class="info-card-details-time">
+              <p class="info-card-details-time-title">Expected Reading Time: </p>
+              <p class="info-card-details-time-amount">2 Hours and 24 Minutes</p>
+            </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+          </div>
+          <div class="info-card-details-table">
+            <table>
+              <tr>
+                <th>Year</th>
+                <td>2011</td>
+              </tr>
+              <tr>
+                <th>Pages</th>
+                <td>410</td>
+              </tr>
+              <tr>
+                <th>Words</th>
+                <td>213220</td>
+              </tr>
+              <tr>
+                <th>Genre</th>
+                <td>Fantasy</td>
+              </tr>
+            </table>
+          </div>
+        </li>
+        <li class="info-card">
+          <div class="info-card-details-cover"><img src="./img/12.jpg">
+            <p class="info-card-details-link"><a href="#">More Details</a></p>
+          </div>
+          <div class="info-card-details-info">
+            <h5 class="info-card-details-title">Me Before You</h5>
+            <h6 class="info-card-details-author">Jojo Moyes</h6>
+            <div class="info-card-details-time">
+              <p class="info-card-details-time-title">Expected Reading Time: </p>
+              <p class="info-card-details-time-amount">13 Hours and 24 Minutes</p>
+            </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+          </div>
+          <div class="info-card-details-table">
+            <table>
+              <tr>
+                <th>Year</th>
+                <td>2011</td>
+              </tr>
+              <tr>
+                <th>Pages</th>
+                <td>410</td>
+              </tr>
+              <tr>
+                <th>Words</th>
+                <td>433000</td>
+              </tr>
+              <tr>
+                <th>Genre</th>
+                <td>Fantasy</td>
+              </tr>
+            </table>
+          </div>
+        </li>
+        <li class="info-card">
+          <div class="info-card-details-cover"><img src="./img/13.jpg">
+            <p class="info-card-details-link"><a href="#">More Details</a></p>
+          </div>
+          <div class="info-card-details-info">
+            <h5 class="info-card-details-title">Eleanor &amp; Park</h5>
+            <h6 class="info-card-details-author">Rainbow Rowell</h6>
+            <div class="info-card-details-time">
+              <p class="info-card-details-time-title">Expected Reading Time: </p>
+              <p class="info-card-details-time-amount">8 Hours and 24 Minutes</p>
+            </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+          </div>
+          <div class="info-card-details-table">
+            <table>
+              <tr>
+                <th>Year</th>
+                <td>2011</td>
+              </tr>
+              <tr>
+                <th>Pages</th>
+                <td>410</td>
+              </tr>
+              <tr>
+                <th>Words</th>
+                <td>433000</td>
+              </tr>
+              <tr>
+                <th>Genre</th>
+                <td>Fantasy</td>
+              </tr>
+            </table>
+          </div>
+        </li>
+        <li class="info-card">
+          <div class="info-card-details-cover"><img src="./img/14.jpg">
+            <p class="info-card-details-link"><a href="#">More Details</a></p>
+          </div>
+          <div class="info-card-details-info">
+            <h5 class="info-card-details-title">Heart Shaped Hack</h5>
+            <h6 class="info-card-details-author">George R.R. Martin</h6>
+            <div class="info-card-details-time">
+              <p class="info-card-details-time-title">Expected Reading Time: </p>
+              <p class="info-card-details-time-amount">8 Hours and 24 Minutes</p>
+            </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+          </div>
+          <div class="info-card-details-table">
+            <table>
+              <tr>
+                <th>Year</th>
+                <td>2011</td>
+              </tr>
+              <tr>
+                <th>Pages</th>
+                <td>410</td>
+              </tr>
+              <tr>
+                <th>Words</th>
+                <td>433000</td>
+              </tr>
+              <tr>
+                <th>Genre</th>
+                <td>Fantasy</td>
+              </tr>
+            </table>
+          </div>
+        </li>
+        <li class="info-card">
+          <div class="info-card-details-cover"><img src="./img/15.jpg">
+            <p class="info-card-details-link"><a href="#">More Details</a></p>
+          </div>
+          <div class="info-card-details-info">
+            <h5 class="info-card-details-title">We Were Liars</h5>
+            <h6 class="info-card-details-author">E. Lockhart</h6>
+            <div class="info-card-details-time">
+              <p class="info-card-details-time-title">Expected Reading Time: </p>
+              <p class="info-card-details-time-amount">4 Hours and 24 Minutes</p>
+            </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+          </div>
+          <div class="info-card-details-table">
+            <table>
+              <tr>
+                <th>Year</th>
+                <td>2011</td>
+              </tr>
+              <tr>
+                <th>Pages</th>
+                <td>410</td>
+              </tr>
+              <tr>
+                <th>Words</th>
+                <td>433000</td>
+              </tr>
+              <tr>
+                <th>Genre</th>
+                <td>Fantasy</td>
+              </tr>
+            </table>
+          </div>
+        </li>
+        <div class="container">
+          <div class="row book-showcase quick-reads">
+            <div class="col-xs-12 list-title list-now-trending">
+              <h6 class="section-title">Now Trending<span class="tag tag-default float-xs-right">See All</span></h6>
+            </div>
+            <div class="col-xs-12 carousel">
+              <ul>
+                    <li>
+                      <div class="carousel-card"><img src="./img/5.jpg" class="carousel-cover"><span class="carousel-time">4 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/11.jpg" class="carousel-cover"><span class="carousel-time">2 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/12.jpg" class="carousel-cover"><span class="carousel-time">13 hrs.</span></div>
+                    </li>
+                    <li>
+                      <div class="carousel-card"><img src="./img/13.jpg" class="carousel-cover"><span class="carousel-time">8 hrs.</span></div>
+                    </li>
+              </ul>
+            </div>
+          </div>
+        </div>
     <footer class="main-footer bg-primary text-xs-center">
       <div class="container"><span class="text-white">©2016 ReadMeter Inc.</span></div>
     </footer>
