--- a/landing.html
+++ b/landing.html
@@ -41,8 +41,8 @@
       </div>
     </div>
         <div class="container">
-          <div class="row search-results-bar">
-            <h4>Search Results Game of</h4>
+          <div class="search-results-bar">
+            <h4>Search Results for <span class="search-term">"Game of"</span></h4>
             <nav aria-label="Page navigation ">
               <ul class="pagination pagination-sm">
                 <li class="page-item disabled"><a href="#" aria-label="Previous" class="page-link"><span aria-hidden="true">«</span><span class="sr-only">Previous</span></a></li>
@@ -51,206 +51,206 @@
               </ul>
             </nav>
           </div>
-          <div class="col-xs-12 search-results">
-            <ul class="container-test">
-              <li class="search-card-test">
-                <div class="search-details-cover-test"><img src="./img/5.jpg">
-                  <p class="details-link-test"><a href="#">More Details</a></p>
-                </div>
-                <div class="search-details-info-test">
-                  <h5 class="search-details-title-test">A Dance with Dragons</h5>
-                  <h6 class="search-details-author-test">George R.R. Martin</h6>
-                  <div class="search-details-time-test">
-                    <p class="search-details-time-title-test">Expected Reading Time: </p>
-                    <p class="search-details-time-amount-test">4 Hours and 24 Minutes</p>
-                  </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
-                </div>
-                <div class="search-details-table-test">
-                  <table>
-                    <tr>
-                      <th>Yead</th>
-                      <td>2011</td>
-                    </tr>
-                    <tr>
-                      <th>Pages</th>
-                      <td>410</td>
-                    </tr>
-                    <tr>
-                      <th>Words</th>
-                      <td>433000</td>
-                    </tr>
-                    <tr>
-                      <th>Genre</th>
-                      <td>Fantasy</td>
-                    </tr>
-                  </table>
-                </div>
-              </li>
-              <li class="search-card-test">
-                <div class="search-details-cover-test"><img src="./img/11.jpg">
-                  <p class="details-link-test"><a href="#">More Details</a></p>
-                </div>
-                <div class="search-details-info-test">
-                  <h5 class="search-details-title-test">The Fault in Our Stars</h5>
-                  <h6 class="search-details-author-test">John Green</h6>
-                  <div class="search-details-time-test">
-                    <p class="search-details-time-title-test">Expected Reading Time: </p>
-                    <p class="search-details-time-amount-test">2 Hours and 24 Minutes</p>
-                  </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
-                </div>
-                <div class="search-details-table-test">
-                  <table>
-                    <tr>
-                      <th>Yead</th>
-                      <td>2011</td>
-                    </tr>
-                    <tr>
-                      <th>Pages</th>
-                      <td>410</td>
-                    </tr>
-                    <tr>
-                      <th>Words</th>
-                      <td>213220</td>
-                    </tr>
-                    <tr>
-                      <th>Genre</th>
-                      <td>Fantasy</td>
-                    </tr>
-                  </table>
-                </div>
-              </li>
-              <li class="search-card-test">
-                <div class="search-details-cover-test"><img src="./img/12.jpg">
-                  <p class="details-link-test"><a href="#">More Details</a></p>
-                </div>
-                <div class="search-details-info-test">
-                  <h5 class="search-details-title-test">Me Before You</h5>
-                  <h6 class="search-details-author-test">Jojo Moyes</h6>
-                  <div class="search-details-time-test">
-                    <p class="search-details-time-title-test">Expected Reading Time: </p>
-                    <p class="search-details-time-amount-test">13 Hours and 24 Minutes</p>
-                  </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
-                </div>
-                <div class="search-details-table-test">
-                  <table>
-                    <tr>
-                      <th>Yead</th>
-                      <td>2011</td>
-                    </tr>
-                    <tr>
-                      <th>Pages</th>
-                      <td>410</td>
-                    </tr>
-                    <tr>
-                      <th>Words</th>
-                      <td>433000</td>
-                    </tr>
-                    <tr>
-                      <th>Genre</th>
-                      <td>Fantasy</td>
-                    </tr>
-                  </table>
-                </div>
-              </li>
-              <li class="search-card-test">
-                <div class="search-details-cover-test"><img src="./img/13.jpg">
-                  <p class="details-link-test"><a href="#">More Details</a></p>
-                </div>
-                <div class="search-details-info-test">
-                  <h5 class="search-details-title-test">Eleanor &amp; Park</h5>
-                  <h6 class="search-details-author-test">Rainbow Rowell</h6>
-                  <div class="search-details-time-test">
-                    <p class="search-details-time-title-test">Expected Reading Time: </p>
-                    <p class="search-details-time-amount-test">8 Hours and 24 Minutes</p>
-                  </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
-                </div>
-                <div class="search-details-table-test">
-                  <table>
-                    <tr>
-                      <th>Yead</th>
-                      <td>2011</td>
-                    </tr>
-                    <tr>
-                      <th>Pages</th>
-                      <td>410</td>
-                    </tr>
-                    <tr>
-                      <th>Words</th>
-                      <td>433000</td>
-                    </tr>
-                    <tr>
-                      <th>Genre</th>
-                      <td>Fantasy</td>
-                    </tr>
-                  </table>
-                </div>
-              </li>
-              <li class="search-card-test">
-                <div class="search-details-cover-test"><img src="./img/14.jpg">
-                  <p class="details-link-test"><a href="#">More Details</a></p>
-                </div>
-                <div class="search-details-info-test">
-                  <h5 class="search-details-title-test">Heart Shaped Hack</h5>
-                  <h6 class="search-details-author-test">George R.R. Martin</h6>
-                  <div class="search-details-time-test">
-                    <p class="search-details-time-title-test">Expected Reading Time: </p>
-                    <p class="search-details-time-amount-test">8 Hours and 24 Minutes</p>
-                  </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
-                </div>
-                <div class="search-details-table-test">
-                  <table>
-                    <tr>
-                      <th>Yead</th>
-                      <td>2011</td>
-                    </tr>
-                    <tr>
-                      <th>Pages</th>
-                      <td>410</td>
-                    </tr>
-                    <tr>
-                      <th>Words</th>
-                      <td>433000</td>
-                    </tr>
-                    <tr>
-                      <th>Genre</th>
-                      <td>Fantasy</td>
-                    </tr>
-                  </table>
-                </div>
-              </li>
-              <li class="search-card-test">
-                <div class="search-details-cover-test"><img src="./img/15.jpg">
-                  <p class="details-link-test"><a href="#">More Details</a></p>
-                </div>
-                <div class="search-details-info-test">
-                  <h5 class="search-details-title-test">We Were Liars</h5>
-                  <h6 class="search-details-author-test">E. Lockhart</h6>
-                  <div class="search-details-time-test">
-                    <p class="search-details-time-title-test">Expected Reading Time: </p>
-                    <p class="search-details-time-amount-test">4 Hours and 24 Minutes</p>
-                  </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
-                </div>
-                <div class="search-details-table-test">
-                  <table>
-                    <tr>
-                      <th>Yead</th>
-                      <td>2011</td>
-                    </tr>
-                    <tr>
-                      <th>Pages</th>
-                      <td>410</td>
-                    </tr>
-                    <tr>
-                      <th>Words</th>
-                      <td>433000</td>
-                    </tr>
-                    <tr>
-                      <th>Genre</th>
-                      <td>Fantasy</td>
-                    </tr>
-                  </table>
-                </div>
-              </li>
+          <div class="search-results">
+            <ul class="container search-container">
+                  <li class="info-card">
+                    <div class="info-card-details-cover"><img src="./img/5.jpg">
+                      <p class="info-card-details-link"><a href="#">More Details</a></p>
+                    </div>
+                    <div class="info-card-details-info">
+                      <h5 class="info-card-details-title">A Dance with Dragons</h5>
+                      <h6 class="info-card-details-author">George R.R. Martin</h6>
+                      <div class="info-card-details-time">
+                        <p class="info-card-details-time-title">Expected Reading Time: </p>
+                        <p class="info-card-details-time-amount">4 Hours and 24 Minutes</p>
+                      </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+                    </div>
+                    <div class="info-card-details-table">
+                      <table>
+                        <tr>
+                          <th>Year</th>
+                          <td>2011</td>
+                        </tr>
+                        <tr>
+                          <th>Pages</th>
+                          <td>410</td>
+                        </tr>
+                        <tr>
+                          <th>Words</th>
+                          <td>433000</td>
+                        </tr>
+                        <tr>
+                          <th>Genre</th>
+                          <td>Fantasy</td>
+                        </tr>
+                      </table>
+                    </div>
+                  </li>
+                  <li class="info-card">
+                    <div class="info-card-details-cover"><img src="./img/11.jpg">
+                      <p class="info-card-details-link"><a href="#">More Details</a></p>
+                    </div>
+                    <div class="info-card-details-info">
+                      <h5 class="info-card-details-title">The Fault in Our Stars</h5>
+                      <h6 class="info-card-details-author">John Green</h6>
+                      <div class="info-card-details-time">
+                        <p class="info-card-details-time-title">Expected Reading Time: </p>
+                        <p class="info-card-details-time-amount">2 Hours and 24 Minutes</p>
+                      </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+                    </div>
+                    <div class="info-card-details-table">
+                      <table>
+                        <tr>
+                          <th>Year</th>
+                          <td>2011</td>
+                        </tr>
+                        <tr>
+                          <th>Pages</th>
+                          <td>410</td>
+                        </tr>
+                        <tr>
+                          <th>Words</th>
+                          <td>213220</td>
+                        </tr>
+                        <tr>
+                          <th>Genre</th>
+                          <td>Fantasy</td>
+                        </tr>
+                      </table>
+                    </div>
+                  </li>
+                  <li class="info-card">
+                    <div class="info-card-details-cover"><img src="./img/12.jpg">
+                      <p class="info-card-details-link"><a href="#">More Details</a></p>
+                    </div>
+                    <div class="info-card-details-info">
+                      <h5 class="info-card-details-title">Me Before You</h5>
+                      <h6 class="info-card-details-author">Jojo Moyes</h6>
+                      <div class="info-card-details-time">
+                        <p class="info-card-details-time-title">Expected Reading Time: </p>
+                        <p class="info-card-details-time-amount">13 Hours and 24 Minutes</p>
+                      </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+                    </div>
+                    <div class="info-card-details-table">
+                      <table>
+                        <tr>
+                          <th>Year</th>
+                          <td>2011</td>
+                        </tr>
+                        <tr>
+                          <th>Pages</th>
+                          <td>410</td>
+                        </tr>
+                        <tr>
+                          <th>Words</th>
+                          <td>433000</td>
+                        </tr>
+                        <tr>
+                          <th>Genre</th>
+                          <td>Fantasy</td>
+                        </tr>
+                      </table>
+                    </div>
+                  </li>
+                  <li class="info-card">
+                    <div class="info-card-details-cover"><img src="./img/13.jpg">
+                      <p class="info-card-details-link"><a href="#">More Details</a></p>
+                    </div>
+                    <div class="info-card-details-info">
+                      <h5 class="info-card-details-title">Eleanor &amp; Park</h5>
+                      <h6 class="info-card-details-author">Rainbow Rowell</h6>
+                      <div class="info-card-details-time">
+                        <p class="info-card-details-time-title">Expected Reading Time: </p>
+                        <p class="info-card-details-time-amount">8 Hours and 24 Minutes</p>
+                      </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+                    </div>
+                    <div class="info-card-details-table">
+                      <table>
+                        <tr>
+                          <th>Year</th>
+                          <td>2011</td>
+                        </tr>
+                        <tr>
+                          <th>Pages</th>
+                          <td>410</td>
+                        </tr>
+                        <tr>
+                          <th>Words</th>
+                          <td>433000</td>
+                        </tr>
+                        <tr>
+                          <th>Genre</th>
+                          <td>Fantasy</td>
+                        </tr>
+                      </table>
+                    </div>
+                  </li>
+                  <li class="info-card">
+                    <div class="info-card-details-cover"><img src="./img/14.jpg">
+                      <p class="info-card-details-link"><a href="#">More Details</a></p>
+                    </div>
+                    <div class="info-card-details-info">
+                      <h5 class="info-card-details-title">Heart Shaped Hack</h5>
+                      <h6 class="info-card-details-author">George R.R. Martin</h6>
+                      <div class="info-card-details-time">
+                        <p class="info-card-details-time-title">Expected Reading Time: </p>
+                        <p class="info-card-details-time-amount">8 Hours and 24 Minutes</p>
+                      </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+                    </div>
+                    <div class="info-card-details-table">
+                      <table>
+                        <tr>
+                          <th>Year</th>
+                          <td>2011</td>
+                        </tr>
+                        <tr>
+                          <th>Pages</th>
+                          <td>410</td>
+                        </tr>
+                        <tr>
+                          <th>Words</th>
+                          <td>433000</td>
+                        </tr>
+                        <tr>
+                          <th>Genre</th>
+                          <td>Fantasy</td>
+                        </tr>
+                      </table>
+                    </div>
+                  </li>
+                  <li class="info-card">
+                    <div class="info-card-details-cover"><img src="./img/15.jpg">
+                      <p class="info-card-details-link"><a href="#">More Details</a></p>
+                    </div>
+                    <div class="info-card-details-info">
+                      <h5 class="info-card-details-title">We Were Liars</h5>
+                      <h6 class="info-card-details-author">E. Lockhart</h6>
+                      <div class="info-card-details-time">
+                        <p class="info-card-details-time-title">Expected Reading Time: </p>
+                        <p class="info-card-details-time-amount">4 Hours and 24 Minutes</p>
+                      </div><img src="./img/icons/amazon-banner-01.gif" class="amazon-banner-01">
+                    </div>
+                    <div class="info-card-details-table">
+                      <table>
+                        <tr>
+                          <th>Year</th>
+                          <td>2011</td>
+                        </tr>
+                        <tr>
+                          <th>Pages</th>
+                          <td>410</td>
+                        </tr>
+                        <tr>
+                          <th>Words</th>
+                          <td>433000</td>
+                        </tr>
+                        <tr>
+                          <th>Genre</th>
+                          <td>Fantasy</td>
+                        </tr>
+                      </table>
+                    </div>
+                  </li>
             </ul>
           </div>
         </div>
